Fix .sidebar on small screens

--- a/assets/stylesheets/fly.css.scss
+++ b/assets/stylesheets/fly.css.scss
@@ -322,3 +322,13 @@ footer .nav-h {
     margin-right: 2em;
   }
 }
+
+@media #{$smallBreakPoint} {
+  .sidebar {
+    float: none;
+    width: auto;
+    height: auto;
+    border: none;
+    margin: 0;
+  }
+}
